@@ -200,6 +200,7 @@ declare global {
          * @param args The action parameters.
          * @param callback The function to be called with the result of the action.
          */
+        queryAction(action: ActionType, args: object, callback: (result: GameActionResult) => void): void;
         queryAction(action: string, args: object, callback: (result: GameActionResult) => void): void;
 
         /**
@@ -209,6 +210,7 @@ declare global {
          * @param args The action parameters.
          * @param callback The function to be called with the result of the action.
          */
+        executeAction(action: ActionType, args: object, callback: (result: GameActionResult) => void): void;
         executeAction(action: string, args: object, callback: (result: GameActionResult) => void): void;
 
         /**
@@ -309,9 +311,89 @@ declare global {
         "research" |
         "interest";
 
+    type ActionType =
+        "balloonpress" |
+        "bannerplace" |
+        "bannerremove" |
+        "bannersetcolour" |
+        "bannersetname" |
+        "bannersetstyle" |
+        "clearscenery" |
+        "climateset" |
+        "footpathplace" |
+        "footpathplacefromtrack" |
+        "foothpathremove" |
+        "footpathsceneryplace" |
+        "footpathsceneryremove" |
+        "guestsetflags" |
+        "guestsetname" |
+        "landbuyrights" |
+        "landlower" |
+        "landraise" |
+        "landsetheight" |
+        "landsetrights" |
+        "landsmoothaction" |
+        "largesceneryplace" |
+        "largesceneryremove" |
+        "largescenerysetcolour" |
+        "loadorquit" |
+        "mazeplacetrack" |
+        "mazesettrack" |
+        "networkmodifygroup" |
+        "parkentranceremove" |
+        "parkmarketing" |
+        "parksetdate" |
+        "parksetloan" |
+        "parksetname" |
+        "parksetparameter" |
+        "parksetresearchfunding" |
+        "pausetoggle" |
+        "peeppickup" |
+        "placeparkentrance" |
+        "placepeepspawn" |
+        "playerkick" |
+        "playersetgroup" |
+        "ridecreate" |
+        "ridedemolish" |
+        "rideentranceexitplace" |
+        "rideentranceexitremove" |
+        "ridesetappearance" |
+        "ridesetcolourscheme" |
+        "ridesetname" |
+        "ridesetprice" |
+        "ridesetsetting" |
+        "ridesetstatus" |
+        "ridesetvehicles" |
+        "scenariosetsetting" |
+        "setcheataction" |
+        "setparkentrancefee" |
+        "signsetname" |
+        "smallsceneryplace" |
+        "smallsceneryremove" |
+        "stafffire" |
+        "staffhire" |
+        "staffsetcolour" |
+        "staffsetcostume" |
+        "staffsetname" |
+        "staffsetorders" |
+        "staffsetpatrolarea" |
+        "surfacesetstyle" |
+        "tilemodify" |
+        "trackdesign" |
+        "trackplace" |
+        "trackremove" |
+        "tracksetbrakespeed" |
+        "wallplace" |
+        "wallremove" |
+        "wallsetcolour" |
+        "waterlower" |
+        "waterraise" |
+        "watersetheight";
+
     interface GameActionEventArgs {
         readonly player: number;
-        readonly type: string;
+        readonly type: number;
+        readonly action: string;
         readonly isClientOnly: boolean;
         readonly args: object;
         result: GameActionResult;
